<resources>
    <string name="app_name">My Life Cycles</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcoming_text">Welcome!\nThis is a tamagochi-themed \nwomen\'s calendar. \nHere is how to use it:</string>
    <string name="got_it">Поняла!</string>
    <string name="your_cycle_duration">Ваша продолжительность цикла:</string>
    <string name="your_name">Ваше имя:</string>
    <string name="days">дн.</string>
    <string name="your_period_duration">Ваша длительность менструации:</string>
    <string name="done">Готово</string>
    <string name="settings">Настройки</string>
    <string name="you_can_change_them_anytime">Можно поменять в любое время</string>
    <string name="anything">Что угодно…</string>
    <string name="graveyard">Кладбище</string>
    <string name="calendar">Календарь</string>
    <string name="pet_name">Имя питомца</string>
    <string name="cycle_phase">Фаза цикла:</string>
    <string name="cycle_day">День цикла:</string>
    <string name="age">Возраст:</string>
    <string name="period_started">Начало менструации</string>
    <string name="welcome_home">Добро пожаловать домой!</string>
</resources>